Fixing overflow on menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,26 +75,21 @@ main#content {
 /* MENU */
 .hamburger-menu {
     display: none;
-    position: absolute;
-    top: calc(100% + 1px);
-    left: 0;
     background-color: #f493c1;
-    z-index: 10;
     padding: 1em;
     box-sizing: border-box;
     border-bottom: 1px solid #ccc;
-    width: auto;
-    min-width: 100%;
+    width: 100%;
     border-radius: 10px;
-    max-height: 70vh;
-    overflow-y: auto;
+    max-height: calc(100vh - 70px);
+    overflow: visible; 
 }
 
-.hamburger-menu.show,
-.hamburger-menu.show-menu {
+.hamburger-menu.show {
     display: block;
 }
 
+/* Menu Links */
 .menu-links {
     list-style: none;
     padding: 0;
